Camlp5 Version 8.03.03:
--------------------

* [20 Feb 2025] Arrgh, there was still a Windows-specific bug.

  thanks to @a2line and the geneweb folks, we found it, and this release should fix it.

  For real.  I swear.

Camlp5 Version 8.03.02:
--------------------

* [16 Feb 2025] Bugfix: quoted-string-extensions within comments were being improperly parsed

  * also added support for when-expressions in stream-parser
    lookaheads, and stream-lexer patterns and lookaheads.

  * merged latest changes from @tobil4sk to support Windows

Camlp5 Version 8.03.01:
--------------------

* [01 Oct 2024] update for Ocaml 5.3.0

  * also merged minimal support for Windows (thank you @tobil4sk !)

Camlp5 Version 8.03.00:
--------------------

* [25 Apr 2024] update for Ocaml 5.2.0

  Only really salient change (other than supporting new ocaml syntax)
  is that the former Camlp5 revised-syntax "raw-identifier" syntax is
  now removed in favor of the new Ocaml 5.2.0 raw-identifier syntax.
  This should affect almost literally nobody, but just in case, the
  old syntax was (e.g.) "\begin" and the new 5.2.0 syntax is "\#begin".

  I highly doubt that anybody used the old syntax, since it was
  undocumented and only available in revised mode, but hey, just in
  case, letting you know I removed it.

  BUT BUT BUT NOTE WELL this has impact on packages that use camlp5
  internals, b/c some of the internal interfaces have changed.  Specifically:

  (1) if you use "camlp5 pa_r.cmo .... pr_o.cmo" to invoke the preprocessor
  rather than

  "not-ocamlfind preprocess -syntax camlp5r -package camlp5.pa_r,....,camlp5.pr_o"

  you will need to add "o_keywords.cmo" before "pr_o.cmo" (this is
  required by the need to print keywords for each syntax as escaped
  raw identifiers.  Since each syntax has a slightly different set of
  keywords, the printer needs to be parameterized by the
  keyword-table.

  NOTE WELL that you are supplying the same "-syntax" and "-package"