@@ -7,7 +7,7 @@ include $(TOP)/config/Makefile
 ifeq ($(OS),Windows_NT)
 BSDIR:=$(shell ocamlfind query camlp5-buildscripts)
 #LAUNCH:=env TOP=$(TOP) $(BSDIR)/LAUNCH.PL -OCAMLPATH-pathsep ";" -vv
-LAUNCHPL:=env TOP=$(TOP) $(BSDIR)/LAUNCH.PL -vv
+#LAUNCHPL:=env TOP=$(TOP) $(BSDIR)/LAUNCH.PL -vv
 #LAUNCH:=env TOP=$(TOP) ../tools/LAUNCH.PL -vv
 #LAUNCH:=env TOP=$(TOP) ocamlfind camlp5-buildscripts/LAUNCH$(EXE) -v --
 endif
